<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editText_new_chat"
        android:fontFamily="@font/roboto"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_searching_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:textColor="@color/black"
        android:hint="@string/editText_get_new_chat"
        android:inputType="text">
    </EditText>

    <Button
        android:id="@+id/btnSearch"
        android:fontFamily="@font/roboto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_search" />
</LinearLayout>
