<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/messenger_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view_hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/caveat_medium"
        android:text="@string/text_view_hi"
        android:textColor="#204E7F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>


    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/caveat_medium"
        android:textColor="#204E7F"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/text_view_hi"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_new_chat"
        android:layout_width="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/btn_new_chat"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="#8BC34A"
        android:backgroundTint="#FFEB3B"
        app:srcCompat="@drawable/baseline_add_24" />

    <ImageButton
        android:id="@+id/imageButton_menu"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/btn_menu"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

</androidx.constraintlayout.widget.ConstraintLayout>